# zk-swap-libff

./: CMakeLists.txt  build-macos  build_macOS.sh
libff/: CMakeLists.txt
libff/algebra/curves/: README.md  bls12.hpp  bls12.tcc  sw.hpp
libff/algebra/curves/bls12_377/: README.md  bls12_377_init.cpp  bls12_377_init.hpp  bls12_377_pairing.cpp  bls12_377_pp.cpp  bls12_377_pp.hpp  old-pairing.cpp  zexe-init.cpp
libff/algebra/curves/bls12_381/: README.md  bls12_381_g1.cpp  bls12_381_g1.hpp  bls12_381_g2.cpp  bls12_381_g2.hpp  bls12_381_init.cpp  bls12_381_init.hpp  bls12_381_pairing.cpp  bls12_381_pairing.hpp  bls12_381_pp.cpp  bls12_381_pp.hpp
libff/algebra/curves/bn128/: bn128_init.cpp
libff/algebra/curves/bw12_446/: README.md  bw12_446_g1.cpp  bw12_446_g1.hpp  bw12_446_g2.cpp  bw12_446_g2.hpp  bw12_446_init.cpp  bw12_446_init.hpp  bw12_446_pairing.cpp  bw12_446_pairing.hpp  bw12_446_pp.cpp  bw12_446_pp.hpp  curve_name_init.cpp
libff/algebra/curves/bw6_761/: README.md  bw6_761_g1.cpp  bw6_761_g1.hpp  bw6_761_g2.cpp  bw6_761_g2.hpp  bw6_761_init.cpp  bw6_761_init.hpp  bw6_761_pairing.cpp  bw6_761_pairing.hpp  bw6_761_pp.cpp  bw6_761_pp.hpp
libff/algebra/curves/hg6/: README.md  hg6_g1.cpp  hg6_g1.hpp  hg6_g2.cpp  hg6_g2.hpp  hg6_init.cpp  hg6_init.hpp  hg6_pairing.cpp  hg6_pairing.hpp  hg6_pp.cpp  hg6_pp.hpp
libff/algebra/curves/mnt/mnt4/: mnt4_g1.cpp  mnt4_g1.hpp  mnt4_g2.cpp  mnt4_g2.hpp  mnt4_init.cpp  mnt4_pp.cpp  mnt4_pp.hpp
libff/algebra/curves/mnt/mnt6/: mnt6_g1.hpp  mnt6_g2.hpp  mnt6_init.cpp  mnt6_pp.cpp  mnt6_pp.hpp
libff/algebra/curves/mnt753/: mnt46753_common.cpp  mnt46753_common.hpp
libff/algebra/curves/mnt753/mnt4753/: README.md  mnt4753_g1.cpp  mnt4753_g1.hpp  mnt4753_g2.cpp  mnt4753_g2.hpp  mnt4753_init.cpp  mnt4753_init.hpp  mnt4753_pairing.cpp  mnt4753_pairing.hpp  mnt4753_pp.cpp  mnt4753_pp.hpp
libff/algebra/curves/mnt753/mnt6753/: README.md  mnt6753_g1.cpp  mnt6753_g1.hpp  mnt6753_g2.cpp  mnt6753_g2.hpp  mnt6753_init.cpp  mnt6753_init.hpp  mnt6753_pairing.cpp  mnt6753_pairing.hpp  mnt6753_pp.cpp  mnt6753_pp.hpp
libff/algebra/curves/pendulum/: .pendulum_pairing.cpp.swp  README.md  pendulum_g1.cpp  pendulum_g1.hpp  pendulum_g2.cpp  pendulum_g2.hpp  pendulum_init.cpp  pendulum_init.hpp  pendulum_pairing.cpp  pendulum_pairing.hpp  pendulum_pp.cpp  pendulum_pp.hpp
libff/algebra/curves/sw6/: README.md  sw6_g1.cpp  sw6_g1.hpp  sw6_g2.cpp  sw6_g2.hpp  sw6_init.cpp  sw6_init.hpp  sw6_pairing.cpp  sw6_pairing.hpp  sw6_pp.cpp  sw6_pp.hpp
libff/algebra/curves/sw6_bis/: README.md  benchmark-details.txt  benchmark-tab.md  sw6_bis_g1.cpp  sw6_bis_g1.hpp  sw6_bis_g2.cpp  sw6_bis_g2.hpp  sw6_bis_init.cpp  sw6_bis_init.hpp  sw6_bis_pairing.cpp  sw6_bis_pairing.hpp  sw6_bis_pp.cpp  sw6_bis_pp.hpp
libff/algebra/curves/test_curve/: test_curve_g1.cpp  test_curve_g1.hpp  test_curve_g2.cpp  test_curve_g2.hpp  test_curve_init.cpp  test_curve_init.hpp  test_curve_pairing.cpp  test_curve_pairing.hpp  test_curve_pp.cpp  test_curve_pp.hpp
libff/algebra/curves/tests/: test_bilinearity.cpp  test_groups.cpp  test_operations_time.cpp
libff/algebra/curves/toy_curve/: README.md  toy_curve_g1.cpp  toy_curve_g1.hpp  toy_curve_g2.cpp  toy_curve_g2.hpp  toy_curve_init.cpp  toy_curve_init.hpp  toy_curve_init_old.cpp  toy_curve_pairing.cpp  toy_curve_pairing.hpp  toy_curve_pp.cpp  toy_curve_pp.hpp
libff/algebra/fields/: bigint.hpp  bigint.tcc  fp.hpp  fp.tcc  fp12_2over3over2.hpp  fp12_2over3over2.tcc  fp2.hpp  fp2.tcc  fp6_2over3.hpp  fp6_2over3.tcc  fp6_3over2.hpp  fp6_3over2.tcc
libff/algebra/fields/tests/: test_fields.cpp
libff/common/: profiling.cpp  utils.cpp
libff/common/default_types/: ec_pp.hpp
